--- a/libs/lib1/CMakeLists.txt
+++ b/libs/lib1/CMakeLists.txt
@@ -1,8 +1,7 @@
 project(lib1)
 
 add_library(${PROJECT_NAME}
-	lib1-priv-impl.cpp
-	lib1-pub-impl.cpp
+	lib1.cpp
 )
 
 add_library(libs::${PROJECT_NAME} ALIAS ${PROJECT_NAME})
@@ -11,8 +10,6 @@ target_include_directories(${PROJECT_NAME}
 	PUBLIC
 		$<INSTALL_INTERFACE:include>
 		$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
-	PRIVATE
-		${CMAKE_CURRENT_SOURCE_DIR}
 )
 
 target_compile_features(${PROJECT_NAME}
