Improved CMakelists format

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -4,13 +4,11 @@ add_executable(${PROJECT_NAME}
 	src/main.cpp
 )
 
-target_include_directories(${PROJECT_NAME}
-	PUBLIC
-		${CMAKE_CURRENT_SOURCE_DIR}/include
+target_include_directories(${PROJECT_NAME} PUBLIC
+	${CMAKE_CURRENT_SOURCE_DIR}/include
 )
 
-target_link_libraries(${PROJECT_NAME}
-	PRIVATE
-		libs::lib1
-        libs::lib2
+target_link_libraries(${PROJECT_NAME} PRIVATE
+	libs::lib1
+    libs::lib2
 )
