--- a/libs/lib1/tests/CMakeLists.txt
+++ b/libs/lib1/tests/CMakeLists.txt
@@ -4,9 +4,8 @@ add_executable(${PROJECT_NAME}
     main.cpp
 )
 
-target_link_libraries(${PROJECT_NAME}
-    PRIVATE
-        libs::lib1
+target_link_libraries(${PROJECT_NAME} PRIVATE
+    libs::lib1
 )
 
 add_test(lib1_tests ${PROJECT_NAME})
