--- a/libs/lib2/CMakeLists.txt
+++ b/libs/lib2/CMakeLists.txt
@@ -6,16 +6,12 @@ add_library(${PROJECT_NAME}
 
 add_library(libs::${PROJECT_NAME} ALIAS ${PROJECT_NAME})
 
-target_include_directories(${PROJECT_NAME}
-	PUBLIC
-		$<INSTALL_INTERFACE:include>
-		$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+target_include_directories(${PROJECT_NAME} PUBLIC
+	$<INSTALL_INTERFACE:include>
+	$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
 )
 
-target_compile_features(${PROJECT_NAME}
-	PRIVATE
-		cxx_std_11
-)
+target_compile_features(${PROJECT_NAME} PRIVATE cxx_std_11)
 
 if(BUILD_TESTING)
 	add_subdirectory(tests)
