--- a/libs/lib2/tests/CMakeLists.txt
+++ b/libs/lib2/tests/CMakeLists.txt
@@ -4,9 +4,8 @@ add_executable(${PROJECT_NAME}
     main.cpp
 )
 
-target_link_libraries(${PROJECT_NAME}
-    PRIVATE
-        libs::lib2
+target_link_libraries(${PROJECT_NAME} PRIVATE
+    libs::lib2
 )
 
 add_test(lib2_tests ${PROJECT_NAME})
